[workspace]
members = [
  "crates/codegen",
  "crates/platform",
  "crates/util",
  "crates/w3gs",
  "crates/w3map",
  "crates/blp",
  "crates/lan",
  "crates/log",
  "crates/log-subscriber",
  "crates/config",
  "crates/net",
  "crates/w3storage",
  "crates/w3replay",
  "crates/constants",
  "crates/event",
  "crates/task",
  "crates/types",

  "crates/controller",
  "crates/node",
  "crates/observer",
  "crates/client",

  "binaries/flo",
  "binaries/flo-cli",
  "binaries/flo-controller-service",
  "binaries/flo-node-service",

  "deps/flo-grpc"
]

[patch.crates-io]
#stormlib = { path = "../stormlib-rs/crates/stormlib" }
#stormlib-sys = { path = "../stormlib-rs/crates/stormlib-sys" }
stormlib = { git = "https://github.com/wc3tools/stormlib-rs.git" }
stormlib-sys = { git = "https://github.com/wc3tools/stormlib-rs.git" }
trust-dns-proto = { git = "https://github.com/fluxxu/trust-dns.git", branch = "main" }
trust-dns-client = { git = "https://github.com/fluxxu/trust-dns.git", branch = "main" }
casclib = { git = "https://github.com/wc3tools/casclib-rs.git" }
casclib-sys = { git = "https://github.com/wc3tools/casclib-rs.git" }
#s2-grpc-utils = { path = "../s2-grpc-utils" }
s2-grpc-utils = { git = "https://github.com/Ventmere/s2-grpc-utils.git", branch = "0.2" }
#flo-state = { path = "../flo-state" }
flo-state = { git = "https://github.com/wc3tools/flo-state.git", branch = "main" }
