[workspace]
members = [
  "crates/codegen",
  "crates/platform",
  "crates/util",
  "crates/w3gs",
  "crates/w3map",
  "crates/w3c",
  "crates/blp",
  "crates/lan",
  "crates/log",
  "crates/log-subscriber",
  "crates/config",
  "crates/net",
  "crates/w3storage",
  "crates/w3replay",
  "crates/constants",
  "crates/event",
  "crates/task",
  "crates/types",

  "crates/controller",
  "crates/node",
  "crates/observer",
  "crates/client",

  "binaries/flo",
  "binaries/flo-cli",
  "binaries/flo-controller-service",
  "binaries/flo-node-service",
  "binaries/flo-worker",
  "binaries/flo-worker-ui",

  "deps/flo-grpc"
]

[patch.crates-io]
#stormlib = { path = "../stormlib-rs/crates/stormlib" }
#stormlib-sys = { path = "../stormlib-rs/crates/stormlib-sys" }
stormlib = { git = "https://github.com/wc3tools/stormlib-rs.git" }
stormlib-sys = { git = "https://github.com/wc3tools/stormlib-rs.git" }
casclib = { git = "https://github.com/wc3tools/casclib-rs.git" }
casclib-sys = { git = "https://github.com/wc3tools/casclib-rs.git" }
#s2-grpc-utils = { path = "../s2-grpc-utils" }
s2-grpc-utils = { git = "https://github.com/Ventmere/s2-grpc-utils.git", branch = "0.2" }
#flo-state = { path = "../flo-state" }
bs-diesel-utils = { git = "https://github.com/BSpaceinc/bs-diesel-utils.git", rev = "cb6a957915532085a19735886ba2884fcc57aeff" }