[workspace]
members = [
  "crates/codegen",
  "crates/platform",
  "crates/util",
  "crates/w3gs",
  "crates/w3map",
  "crates/w3c",
  "crates/blp",
  "crates/lan",
  "crates/log",
  "crates/log-subscriber",
  "crates/config",
  "crates/net",
  "crates/w3storage",
  "crates/w3replay",
  "crates/constants",
  "crates/event",
  "crates/task",
  "crates/types",
  "crates/debug",
  "crates/observer",
  "crates/observer-fs",

  "crates/controller",
  "crates/node",
  "crates/observer-consumer",
  "crates/client",

  "binaries/flo",
  "binaries/flo-cli",
  "binaries/flo-controller-service",
  "binaries/flo-node-service",
  "binaries/flo-observer-service",
  "binaries/flo-worker",
  "binaries/flo-worker-ui",

  "deps/flo-grpc"
]

[patch.crates-io]
#stormlib = { path = "../stormlib-rs/crates/stormlib" }
#stormlib-sys = { path = "../stormlib-rs/crates/stormlib-sys" }
stormlib = { git = "https://github.com/wc3tools/stormlib-rs.git" }
stormlib-sys = { git = "https://github.com/wc3tools/stormlib-rs.git" }
casclib = { git = "https://github.com/wc3tools/casclib-rs.git" }
casclib-sys = { git = "https://github.com/wc3tools/casclib-rs.git" }
#s2-grpc-utils = { path = "../s2-grpc-utils" }
# for some reason branch = "0.2" has commit reverting update prost to 0.7 (maybe for usage elsewhere)
# this revision is exactly one what is working in lock file (suggestion: create new branch for flo on this project)
s2-grpc-utils = { git = "https://github.com/Ventmere/s2-grpc-utils.git", rev = "2fbaf10796f7a25ae458b7ec5f0d446efe2ba673" }
#flo-state = { path = "../flo-state" }
bs-diesel-utils = { git = "https://github.com/BSpaceinc/bs-diesel-utils.git" }
async-dnssd = { git = "https://github.com/fluxxu/rust-async-dnssd.git" }
