[package]
name = "flo-cli"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flo-log-subscriber = { path = "../../crates/log-subscriber" }
flo-controller = { path = "../../crates/controller" }
flo-net = { path = "../../crates/net" }
flo-lan = { path = "../../crates/lan" }
flo-grpc = { path = "../../deps/flo-grpc" }
flo-w3storage = { path = "../../crates/w3storage" }
flo-w3map = { path = "../../crates/w3map" }
flo-client = { path = "../../crates/client", features = ["worker"] }
flo-debug = { path = "../../crates/debug" }

anyhow = "1"
tonic = "0.4"
dotenv = "0.15"
clap = "2.33"
structopt = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tokio = { version = "1.5", features = ["macros", "signal"] }
rand = "0.8"
hex = "0.4"
async-tungstenite = { version = "0.11", features = ["tokio-runtime"] }
futures = "0.3"
serde_json = "1"
once_cell = "1.7"
