[package]
name = "flo-cli"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-log-subscriber = { path = "../../crates/log-subscriber" }
flo-controller = { path = "../../crates/controller" }
flo-observer-edge = { path = "../../crates/observer-edge" }
flo-observer-archiver = { path = "../../crates/observer-archiver" }
flo-net = { path = "../../crates/net" }
flo-lan = { path = "../../crates/lan" }
flo-grpc = { path = "../../deps/flo-grpc" }
flo-w3storage = { path = "../../crates/w3storage" }
flo-w3map = { path = "../../crates/w3map" }
flo-w3gs = { path = "../../crates/w3gs" }
flo-client = { path = "../../crates/client", features = ["worker"] }
flo-debug = { path = "../../crates/debug" }
flo-observer = { path = "../../crates/observer" }
flo-observer-fs = { path = "../../crates/observer-fs" }
flo-kinesis = { path = "../../crates/kinesis" }
flo-w3replay = { path = "../../crates/w3replay" }
flo-util = { path = "../../crates/util" }
flo-types = { path = "../../crates/types" }
flo-replay = { path = "../../crates/replay" }

anyhow = "1"
tonic = "0.6"
dotenv = "0.15"
clap = "2.33"
structopt = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
tokio = { version = "1.15.0", features = ["macros", "signal"] }
tokio-stream = "0.1.8"
rand = "0.8"
hex = "0.4"
async-tungstenite = { version = "0.16.1", features = ["tokio-runtime"] }
futures = "0.3.19"
serde_json = "1"
once_cell = "1.7"
bytes = "1.1.0"
s2-grpc-utils = "0.2"
