[package]
name = "flo-controller-service"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-log-subscriber = { path = "../../crates/log-subscriber" }
flo-controller = { path = "../../crates/controller" }

tracing = "0.1"
bs-diesel-utils = { git = "https://github.com/BSpaceinc/bs-diesel-utils.git" }
dotenv = "0.15"
tokio = { version = "1.5", features = ["time", "sync", "macros", "signal", "rt-multi-thread"] }
tokio-stream = { version = "0.1.5", features = ["time"] }
