[package]
name = "flo-map-checksum-dump"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-w3replay = { path = "../../crates/w3replay" }
flo-w3storage = { path = "../../crates/w3storage" }

winapi = { version = "0.3.9", features = ["winuser", "impl-default"] }
serde_json = "1"