[package]
name = "flo-node-service"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-log = { path = "../../crates/log" }
flo-node = { path = "../../crates/node" }

dotenv = "0.15.0"
tokio = { version = "0.2.21", features = ["time", "sync", "stream", "macros", "blocking"] }