[package]
name = "flo-node-service"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-log-subscriber = { path = "../../crates/log-subscriber" }
flo-node = { path = "../../crates/node" }

dotenv = "0.15"
tokio = { version = "0.2", features = ["time", "sync", "stream", "macros", "blocking"] }
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "timeapi"] }
