[package]
name = "flo-node-service"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-log-subscriber = { path = "../../crates/log-subscriber" }
flo-node = { path = "../../crates/node" }

dotenv = "0.15"
tokio = { version = "1", features = ["time", "sync", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["time"] }
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "timeapi"] }
