[package]
name = "flo-observer-service"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flo-observer-consumer = { path = "../../crates/observer-consumer" }
flo-log-subscriber = { path = "../../crates/log-subscriber" }

dotenv = "0.15"
tokio = { version = "1.15.0", features = ["time", "sync", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.5", features = ["time"] }
tracing = "0.1"
