[package]
name = "flo-stats-service"
version = "0.1.0"
edition = "2021"

[dependencies]
flo-constants = { path = "../../crates/constants" }
flo-observer-edge = { path = "../../crates/observer-edge" }
flo-observer = { path = "../../crates/observer" }
flo-log-subscriber = { path = "../../crates/log-subscriber" }

tokio = { version = "1.21.2", features = ["time", "sync", "macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.10", features = ["time"] }
tracing = "0.1"
async-graphql = { version = "4.0", features = ["chrono"] }
async-graphql-axum = "4.0"
axum = "0.5"
tower-http = { version = "0.2.0", features = ["cors"] }
dotenv = "0.15"
