[package]
name = "flo-windows"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-client = { path = "../../crates/client" }
flo-log-subscriber = { path = "../../crates/log-subscriber" }

tokio = { version = "0.2.22", features = ["time", "tcp", "udp", "stream", "macros", "sync", "blocking", "signal", "rt-threaded"] }
native-windows-gui = { version = "1.0.6", features = ["notice"] }
native-windows-derive = "1.0.2"
winapi = { version = "0.3.9", features = ["processthreadsapi", "shellapi"] }
tracing-appender = "0.1"
tracing-subscriber = "0.2"
tracing = "0.1.21"
anyhow = "1.0.34"
once_cell = "1.4.1"

[build-dependencies]
embed-resource = "1.3"