[package]
name = "flo-worker-ui"
version = "0.1.0"
authors = ["Qeenon <codemasha@gmail.com>"]
edition = "2018"

[dependencies]
# flo worker based:
flo-client = { path = "../../crates/client", features = ["worker"] }
flo-constants = { path = "../../crates/constants" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2.24", features = ["rt-threaded", "signal"] }
tracing-subscriber = "0.2"
tracing-appender = "0.1"
tracing = "0.1"
once_cell = "1.5.2"
serde_json = "1"
serde = "1"
anyhow = "1.0.35"
# for UI
iced = "0.2"
iced_native = "0.3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }
