[package]
name = "flo-worker-ui"
version = "0.1.0"
authors = ["Qeenon <codemasha@gmail.com>"]
edition = "2018"

[dependencies]
# flo worker based:
flo-client = { path = "../../crates/client", features = ["worker"] }
flo-constants = { path = "../../crates/constants" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.5", features = ["rt", "rt-multi-thread", "signal"] }
tracing-subscriber = "0.2"
tracing-appender = "0.1"
tracing = "0.1"
once_cell = "1.5"
serde_json = "1"
serde = "1"
anyhow = "1.0"

# for UI
iced_native = "0.3"
image = "0.23"
webbrowser = "0.5"

# alternatively wgpu instead of glow
[dependencies.iced]
version = "0.2"
default-features = false
features = ["glow_default_system_font", "glow"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[build-dependencies]
embed-resource = "1.4"
