[package]
name = "flo-worker"
version = "0.5.15"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-client = { path = "../../crates/client", features = ["worker"] }
flo-constants = { path = "../../crates/constants" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2.22", features = ["rt-threaded", "signal"] }
tracing-subscriber = "0.2"
tracing-appender = "0.1"
once_cell = "1.4.1"
serde_json = "1.0.59"
anyhow = "1.0.34"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.3"