[package]
name = "flo-worker"
version = "0.7.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[features]
default = []
blacklist = ["flo-client/blacklist"]

[dependencies]
flo-client = { path = "../../crates/client", features = ["worker"] }
flo-constants = { path = "../../crates/constants" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features = ["rt-threaded", "signal"] }
tracing-subscriber = "0.2"
tracing-appender = "0.1"
once_cell = "1.5"
serde_json = "1.0"
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.5"
