[package]
name = "flo-worker"
version = "0.15.1"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[features]
default = []
blacklist = ["flo-client/blacklist"]

[dependencies]
flo-client = { path = "../../crates/client", features = ["worker"] }
flo-constants = { path = "../../crates/constants" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.21.2", features = [
  "rt",
  "rt-multi-thread",
  "signal",
  "fs",
  "time",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing-appender = "0.1"
once_cell = "1.15"
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7"
