[package]
name = "flo"
version = "0.0.3"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-client = { path = "../../crates/client" }
flo-log-subscriber = { path = "../../crates/log-subscriber" }

dotenv = "0.15.0"
tokio = { version = "0.2.22", features = ["time", "tcp", "udp", "stream", "macros", "sync", "blocking", "signal", "rt-threaded"] }