[package]
name = "flo"
version = "0.0.3"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-client = { path = "../../crates/client" }
flo-log-subscriber = { path = "../../crates/log-subscriber" }

dotenv = "0.15"
tokio = { version = "1.0", features = ["time", "net", "macros", "sync", "signal", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["time", "net"] }
