[package]
name = "flo-client"
version = "0.5.2"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[features]
default = ["ws"]
ws = ["async-tungstenite"]
worker = ["ws"]

[dependencies]
flo-constants = { path = "../constants" }
flo-types = { path = "../types" }
flo-log = { path = "../log" }
flo-lan = { path = "../lan" }
flo-net = { path = "../net" }
flo-config = { path = "../config" }
flo-platform = { path = "../platform" }
flo-w3storage = { path = "../w3storage" }
flo-w3map = { path = "../w3map" }
flo-w3gs = { path = "../w3gs" }
flo-util = { path = "../util" }
flo-task = { path = "../task" }
flo-state = "0.6.0"

s2-grpc-utils = "0.2"
tokio = { version = "0.2.22", features = ["time", "tcp", "udp", "stream", "macros", "sync", "blocking", "rt-threaded"] }
async-tungstenite = { version = "0.7.1", features = ["tokio-runtime"], optional = true }
tracing = "0.1"
tracing-futures = "0.2.4"
thiserror = "1.0.20"
anyhow = "1.0.34"
parking_lot = "0.11.0"
http = "0.2.1"
futures = "0.3.5"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.56"
base64 = "0.12.3"
lazy_static = "1.4"
hash-ids = "0.2.1"
rand = "0.7.3"

[dev-dependencies]
dotenv = "0.15.0"
flo-log-subscriber = { path = "../log-subscriber" }
flo-controller = { path = "../controller" }

[build-dependencies]
flo-constants = { path = "../constants" }
