[package]
name = "flo-client"
version = "0.9.11"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[features]
default = ["ws"]
ws = ["async-tungstenite"]
worker = ["ws"]
blacklist = ["flo-w3c/blacklist"]

[dependencies]
flo-constants = { path = "../constants" }
flo-types = { path = "../types" }
flo-log = { path = "../log" }
flo-lan = { path = "../lan" }
flo-net = { path = "../net" }
flo-config = { path = "../config" }
flo-platform = { path = "../platform" }
flo-w3storage = { path = "../w3storage" }
flo-w3map = { path = "../w3map" }
flo-w3gs = { path = "../w3gs" }
flo-util = { path = "../util" }
flo-task = { path = "../task" }
flo-w3c = { path = "../w3c" }
flo-state = "1"
flo-observer = { path = "../observer" }
flo-observer-fs = { path = "../observer-fs" }

s2-grpc-utils = "0.2"
tokio = { version = "1.5", features = ["time", "net", "macros", "sync", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1.5", features = ["time", "net"] }
tokio-util = "0.6"
async-tungstenite = { version = "0.11", features = ["tokio-runtime"], optional = true }
tracing = "0.1"
tracing-futures = "0.2"
thiserror = "1.0"
anyhow = "1.0"
parking_lot = "0.11"
http = "0.2"
futures = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0"
base64 = "0.12"
lazy_static = "1.4"
hash-ids = "0.2"
rand = "0.8"
backoff = "0.3"
bytes = "1.0"

[dev-dependencies]
dotenv = "0.15"
flo-log-subscriber = { path = "../log-subscriber" }
flo-controller = { path = "../controller" }
flo-observer-consumer = { path = "../observer-consumer" }

[build-dependencies]
flo-constants = { path = "../constants" }
