[package]
name = "flo-config"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flo-constants = { path = "../constants" }

serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
thiserror = "1"
