[package]
name = "flo-controller"
version = "0.1.1"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-w3gs = { path = "../w3gs" }
flo-grpc = { path = "../../deps/flo-grpc" }
flo-net = { path = "../net" }
flo-constants = { path = "../constants" }
flo-log = { path = "../log" }
flo-task = { path = "../task" }
flo-state = "0.5"
flo-types = { path = "../types" }

thiserror = "1.0.20"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bs-diesel-utils = { git = "https://github.com/BSpaceinc/bs-diesel-utils.git" }
s2-grpc-utils = "0.2"
diesel = { version = "1.4.3", features = ["postgres", "chrono", "32-column-tables", "serde_json", "uuid", "r2d2", "numeric", "chrono"] }
diesel_migrations = "1.4.0"
serde_json = "1"
tonic = "0.3.0"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["time", "sync", "stream", "macros", "blocking"] }
tracing = "0.1"
tracing-futures = "0.2.4"
parking_lot = "0.11.0"
dashmap = "3.11.7"
hyper = "0.13.7"
prometheus = "0.9.0"
backoff = { version = "0.2.1", features = ["tokio"] }
rand = "0.7.3"
arc-swap = "1.0.0-rc1"

[dev-dependencies]
dotenv = "0.15.0"
flo-log-subscriber = { path = "../log-subscriber" }

[build-dependencies]
flo-constants = { path = "../constants" }