[package]
name = "flo-controller"
version = "0.1.4"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-w3gs = { path = "../w3gs" }
flo-grpc = { path = "../../deps/flo-grpc" }
flo-net = { path = "../net" }
flo-constants = { path = "../constants" }
flo-log = { path = "../log" }
flo-task = { path = "../task" }
flo-state = "0.6"
flo-types = { path = "../types" }

thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bs-diesel-utils = "0.1"
s2-grpc-utils = "0.2"
diesel = { version = "1.4", features = ["postgres", "chrono", "32-column-tables", "serde_json", "uuid", "r2d2", "numeric", "chrono"] }
diesel_migrations = "1.4"
serde_json = "1"
tonic = "0.3"
jsonwebtoken = "7.2"
lazy_static = "1.4"
futures = "0.3"
tokio = { version = "0.2", features = ["time", "sync", "stream", "macros", "blocking"] }
tracing = "0.1"
tracing-futures = "0.2"
parking_lot = "0.11"
dashmap = "3.11"
hyper = "0.13"
prometheus = "0.9"
backoff = { version = "0.2", features = ["tokio"] }
rand = "0.8"
arc-swap = "1.0"
anyhow = "1.0"

[dev-dependencies]
dotenv = "0.15"
flo-log-subscriber = { path = "../log-subscriber" }

[build-dependencies]
flo-constants = { path = "../constants" }
