[package]
name = "flo-controller"
version = "0.1.4"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-w3gs = { path = "../w3gs" }
flo-grpc = { path = "../../deps/flo-grpc" }
flo-net = { path = "../net" }
flo-constants = { path = "../constants" }
flo-log = { path = "../log" }
flo-task = { path = "../task" }
flo-state = "1"
flo-types = { path = "../types" }

thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bs-diesel-utils = "0.1"
s2-grpc-utils = "0.2"
diesel = { version = "1.4", features = ["postgres", "chrono", "32-column-tables", "serde_json", "uuid", "r2d2", "numeric", "chrono"] }
diesel_migrations = "1.4"
serde_json = "1"
tonic = "0.6"
jsonwebtoken = "7.2"
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["time", "sync", "macros"] }
tokio-stream = { version = "0.1.10", features = ["time"] }
tracing = "0.1"
tracing-futures = "0.2"
parking_lot = "0.11"
dashmap = "3.11"
hyper = "0.14"
prometheus = "0.9"
backoff = { version = "0.3" }
rand = "0.8"
arc-swap = "1.5"
anyhow = "1.0"
once_cell = "1.15"

[dev-dependencies]
dotenv = "0.15"
flo-log-subscriber = { path = "../log-subscriber" }

[build-dependencies]
flo-constants = { path = "../constants" }
