[package]
name = "dhost-util"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhost-codegen = { path = "../dhost-codegen" }

thiserror = "1"
tokio-util = { version = "0.3.1", features = ["codec"] }
bytes = "0.5.5"
pretty-hex = "0.1"
enumflags2 = "0.6"