[package]
name = "flo-lan"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-log = { path = "../log" }
flo-util = { path = "../util" }
flo-w3gs = { path = "../w3gs" }
flo-w3map = { path = "../w3map" }
flo-w3storage = { path = "../w3storage" }
flo-w3replay = { path = "../w3replay" }
flo-platform = { path = "../platform" }

tokio = { version = "1.15.0", features = ["time", "sync", "macros"] }
tokio-stream = { version = "0.1.5", features = ["time"] }
hostname = "^0.3"
pretty-hex = "0.1"
bytes = "1.1.0"
prost = "0.7"
base64 = "0.12"
thiserror = "1"
lazy_static = "1"
parking_lot = "0.11"
tracing = "0.1"
tracing-futures = "0.2"
futures = "0.3.19"
async-dnssd = "0.5.0-rc.1"

[build-dependencies]
prost-build = "0.7"
