[package]
name = "flo-lobby"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-w3gs = { path = "../w3gs" }
flo-grpc = "0.1"

thiserror = "1.0.20"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
bs-diesel-utils = { git = "https://github.com/BSpaceinc/bs-diesel-utils.git" }
s2-grpc-utils = { git = "https://github.com/Ventmere/s2-grpc-utils.git" }
diesel = { version = "1.4.3", features = ["postgres", "chrono", "32-column-tables", "serde_json", "uuid", "r2d2", "numeric", "chrono"] }
serde_json = "1"
tonic = "0.2.2"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["time", "sync", "stream", "macros"] }
tracing = "0.1"
tracing-futures = "0.2.4"
parking_lot = "0.11.0"
dashmap = "3.11.7"

[dev-dependencies]
dotenv = "0.15.0"