[package]
name = "flo-net"
version = "0.1.0"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-util = { path = "../util" }
flo-constants = { path = "../constants" }
flo-w3gs = { path = "../w3gs" }
flo-state = "1"

bytes = "1.0"
thiserror = "1"
prost = "0.7"
tokio = { version = "1", features = ["time", "net", "macros", "sync"] }
tokio-stream = { version = "0.1", features = ["time", "net"] }
tokio-util = { version = "0.6", features = ["codec", "net"] }
futures = "0.3"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
prost-build = "0.7"
