[package]
name = "flo-node"
version = "0.1.3"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-types = { path = "../types" }
flo-util = { path = "../util" }
flo-w3gs = { path = "../w3gs" }
flo-net = { path = "../net" }
flo-constants = { path = "../constants" }
flo-event = { path = "../event" }
flo-log = { path = "../log" }
flo-task = { path = "../task" }
flo-state = "0.6.1"

thiserror = "1.0"
bytes = "0.5"
futures = "0.3"
tokio = { version = "0.2", features = ["time", "sync", "stream", "macros", "blocking", "udp", "tcp"] }
tracing = "0.1"
tracing-futures = "0.2"
parking_lot = "0.11"
s2-grpc-utils = "0.2"
lazy_static = "1.0"
uuid = { version = "0.8", features = ["v4"] }
hyper = "0.13"
prometheus = "0.9"
dashmap = "3.11"
smallvec = "1.4"

[build-dependencies]
flo-constants = { path = "../constants" }
