[package]
name = "flo-node"
version = "0.6.2"
authors = ["Flux Xu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
flo-types = { path = "../types" }
flo-util = { path = "../util" }
flo-w3gs = { path = "../w3gs" }
flo-net = { path = "../net" }
flo-constants = { path = "../constants" }
flo-event = { path = "../event" }
flo-log = { path = "../log" }
flo-task = { path = "../task" }
flo-observer = { path = "../observer" }
flo-state = "1"

thiserror = "1.0"
bytes = "1.1.0"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["time", "sync", "macros", "net"] }
tokio-stream = { version = "0.1.5", features = ["time", "net"] }
tokio-util = { version = "0.6", features = ["time"] }
tracing = "0.1"
tracing-futures = "0.2"
parking_lot = "0.11"
s2-grpc-utils = "0.2"
uuid = { version = "0.8", features = ["v4"] }
hyper = "0.14"
prometheus = "0.9"
dashmap = "3.11"
smallvec = "1.4"
slab = "0.4"
once_cell = "1.7"
rusoto_core = "0.47.0"
rusoto_kinesis = "0.47.0"
backoff = "0.3"

[build-dependencies]
flo-constants = { path = "../constants" }

[dev-dependencies]
rand = "0.8"
