[package]
name = "flo-observer-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
rusoto_s3 = "0.47.0"
rusoto_core = "0.47.0"
tokio = { version = "1.15.0", features = ["macros", "time", "rt-multi-thread"] }
backoff = { version = "0.4" }
bytes = "1.1.0"
md5 = "0.7.0"
tracing = "0.1"
futures = "0.3.19"
thiserror = "1.0"
